Added abstract for JMP, picture.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a  class="image avatar"><img src="images/bald_man.jpg" alt="" /></a>
+					<a  class="image avatar"><img src="images/me2.jpg" alt="" /></a>
 				</div>
 			</header>
 
@@ -35,9 +35,17 @@
 				<!-- Two -->
 					<section id="Working Papers">
 						<h2>Working Papers</h2>
-					<h4>Bounding Treatment Effects in Experimental Studies with Non-Compliance: The Role of Follow Up Surveys (preliminary version <a href = "docs/jmp.pdf" target = "_blank"> pdf</a>)</h4>	
-					<p> <b><u>Abstract</u>: </b></p>
-					<h4>Semiparametric Identification of Binary Choice Models with Misreported Outcomes (with <a href = "https://sites.google.com/view/rui-wang-econ" target = "_blank">Rui Wang </a>)</h4>	
+					<h4>Bounding Treatment Effects in Experimental Studies with Non-Compliance: The Role of Follow Up Surveys (preliminary version <a href = "docs/jmp.pdf" target = "_blank"> PDF</a>)</h4>	
+					<p> <b><u>Abstract</u>: </b> In this paper I study the problem of identifying the causal effect of an experimental treatment on an outcome of interest when the experiment suffers from non-compliance.
+					In particular, I consider the identifying power of information collected from non-complying participants after the completion of the treatment phase. Follow up surveys often ask study praticipants
+					why they chose not to accept an offer of treatment despite being assigned to it, and answers to such questions offer insights into the decision process by which agents choose to comply with their assigned treatment 
+					status. I propose a non-parametric model which rationalizes an agent's compliance decision and use it to define a set of values for the average treatment effect which are conformable with data observed
+					in a randomized trial. This model and the implied set of identified values for the average treatment effect rely crucially on the availability of follow up surveys which ask agents why they chose to not comply. 
+					This underscores the importance of following up with non-complying agents since the model often leads to substantially tighter identified sets for the average treatment effect than what is possible
+					without this information. I apply the proposed model to data from the Job Training Partnership Act Study to estimate identifed sets for the average treatment effect for a number of employment outcomes. </p>
+
+					<h4>Semiparametric Identification of Binary Choice Models with Misreported Outcomes(with <a href = "https://sites.google.com/view/rui-wang-econ" target = "_blank">Rui Wang </a>, <a
+					href = "docs/misreporting.pdf" target = "_blank"> PDF</a>)</h4>	
 					<p> <b><u>Abstract</u>: </b>Our paper characterizes partial identification of a binary choice model when the binary dependent variable is potentially misreported. We propose two different approaches by exploiting 
 					different instrumental variables respectively. In the first approach, the instrument is assumed to only affect the true dependent variable but not misreporting probabilities. 
 					The second approach uses an instrument that only affects misreporting probabilities monotonically but does not influence the true dependent variable. These approaches neither 
