Made separate section for JMP

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					</section>
 
 				<!-- Two -->
-					<section id="Working Papers">
-						<h2>Working Papers</h2>
+					<section id="jmp">
+						<h2>Job Market Paper</h2>
 					<h4>Bounding Treatment Effects in Experimental Studies with Non-Compliance: The Role of Follow Up Surveys (preliminary version <a href = "docs/jmp.pdf" target = "_blank"> PDF</a>)</h4>	
 					<p> <b><u>Abstract</u>: </b> In this paper I study the problem of identifying the causal effect of an experimental treatment on an outcome of interest when the experiment suffers from non-compliance.
 					In particular, I consider the identifying power of information collected from non-complying participants after the completion of the treatment phase. Follow up surveys often ask study praticipants
@@ -43,6 +43,10 @@
 					in a randomized trial. This model and the implied set of identified values for the average treatment effect rely crucially on the availability of follow up surveys which ask agents why they chose to not comply. 
 					This underscores the importance of following up with non-complying agents since the model often leads to substantially tighter identified sets for the average treatment effect than what is possible
 					without this information. I apply the proposed model to data from the Job Training Partnership Act Study to estimate identifed sets for the average treatment effect for a number of employment outcomes. </p>
+
+					</section>
+					<section id="Working Papers">
+						<h2>Working Papers</h2>
 
 					<h4>Semiparametric Identification of Binary Choice Models with Misreported Outcomes(with <a href = "https://sites.google.com/view/rui-wang-econ" target = "_blank">Rui Wang </a>, <a
 					href = "docs/misreporting.pdf" target = "_blank"> PDF</a>)</h4>	
