--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://github.com/omondal" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/omondal" class="icon brands fa-github" target = "_blank"><span class="label">Github</span></a></li>
 						<li><a href="mailto: orville.dm@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
