Updated JMP. Added CV.

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 							<h2>Orville Mondal</h2>
 						</header>
 						<p>Hello! I am a graduate student of economics at the Pennsylvania State University, primarily interested in issues of causal inference.</p>
-						<p> You can find my CV <a href = "docs/resume_orville.pdf"  target="_blank"> here</a>.</p>
+						<p> You can find my CV <a href = "docs/cv_orville.pdf"  target="_blank"> here</a>.</p>
 					</section>
 
 				<!-- Two -->
 					<section id="jmp">
 						<h2>Job Market Paper</h2>
 					<h4>Bounding Treatment Effects in Experimental Studies with Non-Compliance: The Role of Follow Up Surveys (preliminary version <a href = "docs/jmp.pdf" target = "_blank"> PDF</a>)</h4>	
-					<p> <b><u>Abstract</u>: </b> In this paper I study the problem of identifying the causal effect of an experimental treatment on an outcome of interest when the experiment suffers from non-compliance.
-					In particular, I consider the identifying power of information collected from non-complying participants after the completion of the treatment phase. Follow up surveys often ask study praticipants
-					why they chose not to accept an offer of treatment despite being assigned to it, and answers to such questions offer insights into the decision process by which agents choose to comply with their assigned treatment 
-					status. I propose a non-parametric model which rationalizes an agent's compliance decision and use it to define a set of values for the average treatment effect which are conformable with data observed
-					in a randomized trial. This model and the implied set of identified values for the average treatment effect rely crucially on the availability of follow up surveys which ask agents why they chose to not comply. 
-					This underscores the importance of following up with non-complying agents since the model often leads to substantially tighter identified sets for the average treatment effect than what is possible
-					without this information. I apply the proposed model to data from the Job Training Partnership Act Study to estimate identifed sets for the average treatment effect for a number of employment outcomes. </p>
+					<p> <b><u>Abstract</u>: </b> In this paper I study the problem of identifying the causal effect of an experimental treatment when the experiment suffers from non-compliance.
+In particular, I consider the identifying power of information collected from non-complying participants after the completion of the treatment phase. Follow up surveys often ask study praticipants
+why they chose not to accept an offer of treatment despite being assigned to it, and answers to such questions offer insights into the decision process by which agents choose to comply with their assigned treatment 
+status. I propose a model which rationalizes an agent's compliance decision and use it to define a set of values for the average treatment effect which are conformable with data observed
+in a randomized trial. This model and the implied set of identified values for the average treatment effect rely crucially on the availability of follow up surveys which ask agents why they chose to not comply. 
+This underscores the importance of following up with non-complying agents since the model often leads to substantially tighter identified sets for the average treatment effect than what is possible
+without this information. I apply the proposed model to data from the Job Training Partnership Act Study to estimate identifed sets for the average treatment effect for a number of employment outcomes. </p>
 
 					</section>
 					<section id="Working Papers">
