--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<header class="major">
 							<h2>Orville Mondal</h2>
 						</header>
-						<p>Hello! I am a graduate student of economics at the Pennsylvania State University, primarily interested in issues of causal inference.</p>
+						<p>Hello! I am a graduate student of economics at the Pennsylvania State University, primarily interested in issues of causal inference with applications in labor and development. </p>
 						<p> You can find my CV <a href = "docs/cv_orville.pdf"  target="_blank"> here</a>.</p>
 					</section>
 
