Minor edits to main page.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Two -->
 					<section id="jmp">
 						<h2>Job Market Paper</h2>
-					<h4>Bounding Treatment Effects in Experimental Studies with Non-Compliance: The Role of Follow Up Surveys (preliminary version <a href = "docs/jmp.pdf" target = "_blank"> PDF</a>)</h4>	
+					<h4>Bounding Treatment Effects in Experimental Studies with Non-Compliance: The Role of Follow Up Surveys (<a href = "docs/jmp.pdf" target = "_blank"> PDF</a>)</h4>	
 					<p> <b><u>Abstract</u>: </b> 		In this paper I study the problem of identifying the causal effect of an experimental treatment when the experiment suffers from non-compliance.
 		In particular, I consider the identifying power of information collected from non-complying participants after the completion of the treatment phase. Follow up surveys often ask study participants
 		why they chose not to accept an offer of treatment despite being assigned to it, and answers to such questions offer insights into the decision process by which agents choose to comply with their assigned treatment 
