Updated CV, resume with title/abstract of structural priors paper.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
 					identification results and demonstrate using simulations that the two approaches perform more robustly than the alternative parametric method. We apply the proposed approaches to 
 					study educational attainment using data from National Longitudinal Surveys in 1976.</p>
 
+				</section>
+				<section id="Work in Progress">
+					<h2>Working Papers</h2>
+					<h4> Optimizing Experimental Site Selection for External Validity: Theory and an Application to Mobile Money
+						in South Asia (with Michael Gechter, Keisuke Hirano, Jean Lee, Mahreen Mahmud, Jonathan Morduch,
+						Saravana Ravindran, Abu Shonchoy)</h4>
+					<p> <b><u>Abstract</u>: </b>
+						A social experiment is typically intended to inform policy decisions for contexts beyond the place and time it
+						is implemented; it is intended to have external validity. In this paper we consider the problem of where to locate a small
+						set of experiments in order to maximize the effectiveness of a derived statistical policy recommendation intended for a much
+						larger set of locations. In our application, we choose six migration corridors from thousands of candidates across South Asia
+						on which to experimentally evaluate a program teaching migrants to send remittances via mobile money, with the goal of
+						deriving policy recommendations for all the candidate sites. We adopt a quasi-Bayesian approach to this design problem by
+						developing a prior specification for the joint distribution of site level average treatment effects based on a microeconometric
+						structural model for migrant remittance decisions and additionally, build in the possibility that there are other sources of
+						heterogeneity across sites that are not captured by the structural model. In ongoing work, we run experiments in the sites
+						selected in this way, and, within our set of chosen locations, evaluate the performance of our methodology in determining the
+						relative informativeness of each site.</p>
 				<!-- Four -->
 				<!--
 					<section id="four">
